--- a/lo.cabal
+++ b/lo.cabal
@@ -35,6 +35,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , unix
   default-language: Haskell2010
 
 executable lo-exe
@@ -49,6 +50,7 @@ executable lo-exe
   build-depends:
       base >=4.7 && <5
     , lo
+    , unix
   default-language: Haskell2010
 
 test-suite lo-test
@@ -64,4 +66,5 @@ test-suite lo-test
   build-depends:
       base >=4.7 && <5
     , lo
+    , unix
   default-language: Haskell2010
