--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                lo
-version:             0.1.0.0
-github:              "githubuser/lo"
-license:             BSD-3-Clause
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2023 Author name here"
+version:             0.1.1
+github:              "https://github.com/Carht/lo"
+license:             GPL-3
+author:              "Charte"
+maintainer:          "echarte@tutanota.com"
+copyright:           "2023 Charte"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/lo#readme>
+description:         Por favor lee el archivo README en GitHub <https://github.com/Carht/lo#README
 
 dependencies:
 - base >= 4.7 && < 5
